# marpii

./: .gitignore  .gitlab-ci.yml  CHANGELOG  Cargo.toml  README.md  dependencies.md
crates/iced-marpii/: Cargo.toml  README.md
crates/iced-marpii/examples/: custom-rmg-widget.rs  custom_shader.comp  custom_shader.spirv  gradient.rs  iced-counter.rs  shapes.rs  styling.rs  svg.rs
crates/iced-marpii/examples/canvas/: Cargo.toml
crates/iced-marpii/shaders/iced-marpii-shared/: Cargo.toml
crates/iced-marpii/shaders/shader-builder/: Cargo.toml  build.rs
crates/iced-marpii/shaders/shader-mesh/: Cargo.toml
crates/iced-marpii/shaders/shader-quad/: Cargo.toml
crates/iced-marpii/shaders/shader-quad-gradient/: Cargo.toml
crates/iced-marpii/shaders/shader-shape/: Cargo.toml
crates/iced-marpii/shaders/shader-text/: Cargo.toml
crates/iced-marpii/shaders/spirv/: shader-mesh.spv  shader-quad-gradient.spv  shader-quad.spv  shader-shape.spv  shader-text.spv  shader_mesh.spv  shader_quad.spv  shader_quad_gradient.spv  shader_shape.spv  shader_text.spv
crates/iced-marpii/src/: batch_cache.rs  compositor.rs  custom.rs  geometry.rs  headless.rs  layers.rs  lib.rs  mesh.rs  quad.rs  renderer.rs  shape.rs  text.rs  util.rs
crates/iced-marpii/src/compositor/: rendering.rs
crates/iced-marpii/src/custom/: event.rs  primitive.rs  renderer.rs  widget.rs
crates/iced-marpii/src/mesh/: pass.rs
crates/iced-marpii/src/quad/: gradient.rs  solid.rs
crates/iced-marpii/src/shape/: program.rs  renderer.rs  solid.rs  text.rs  widget.rs
crates/iced-marpii/src/text/: cache.rs  glue.rs
crates/marpii/: Cargo.toml
crates/marpii-command-graph/: Cargo.toml  README.md
crates/marpii-command-graph/examples/: headless_graph.rs  test_graph.rs
crates/marpii-command-graph/src/: graph.rs  graph_builder.rs  graph_optimizer.rs  lib.rs  pass.rs  state.rs
crates/marpii-command-graph/src/pass/: bindless_bind.rs  blit_to_region.rs  buffer_upload.rs  dynamic_buffer.rs  dynamic_image.rs  image_blit.rs  image_upload.rs  swapchain.rs  swapchain_prepare.rs  wait_external.rs
crates/marpii-commands/: Cargo.toml  README.md
crates/marpii-commands/src/: barrier_builder.rs  buffer_init.rs  image_init.rs  lib.rs  managed_buffer.rs
crates/marpii-descriptor/: Cargo.toml  README.md
crates/marpii-descriptor/src/: bindless.rs  bindless_wrapper.rs  lib.rs  managed_descriptor.rs
crates/marpii-rmg/: Cargo.toml  README.md
crates/marpii-rmg-shared/: Cargo.toml
crates/marpii-rmg-shared/src/: lib.rs
crates/marpii-rmg-tasks/marpii-rmg-task-shader/: Cargo.toml
crates/marpii-rmg-tasks/marpii-rmg-task-shader/glsl/: alphablend.comp  downsample.comp  egui.frag  egui.vert  shared.glsl
crates/marpii-rmg-tasks/marpii-rmg-task-shader/src/: lib.rs
crates/marpii-rmg-tasks/marpii-rmg-task-shared/: Cargo.toml
crates/marpii-rmg-tasks/marpii-rmg-task-shared/src/: lib.rs
crates/marpii-rmg-tasks/marpii-rmg-tasks/: Cargo.toml  build.rs  oldbuild.rs
crates/marpii-rmg-tasks/marpii-rmg-tasks/resources/: eguifrag.spv  eguivert.spv
crates/marpii-rmg-tasks/marpii-rmg-tasks/src/: alpha_blend.rs  download_buffer.rs  downsample.rs  dynamic_buffer.rs  dynamic_image.rs  egui.rs  egui_integration.rs  image_blit.rs  lib.rs  swapchain_blit.rs  swapchain_present.rs  upload_buffer.rs  upload_image.rs
crates/marpii-rmg/src/: graph.rs  helper.rs  lib.rs  recorder.rs  resources.rs  rmg.rs  target_api.rs  task.rs  tasks.rs  track.rs  util.rs
crates/marpii-rmg/src/graph/: scheduler.rs
crates/marpii-rmg/src/helper/: computepass.rs  rasterpass.rs  resource_register.rs
crates/marpii-rmg/src/recorder/: executor.rs  frame.rs  scheduler.rs  task.rs  task_executor.rs  task_scheduler.rs
crates/marpii-rmg/src/resources/: descriptor.rs  handle.rs  res_states.rs  temporary.rs
crates/marpii-rmg/src/rmg/: config.rs  setup.rs
crates/marpii-rmg/src/task/: blit.rs
crates/marpii-rmg/src/tasks/: dynamic_buffer.rs  swapchain_blit.rs  upload_buffer.rs  upload_image.rs
crates/marpii-rmg/tests/: schedule_dry_run.rs
crates/marpii/src/: allocator.rs  context.rs  error.rs  lib.rs  resources.rs  surface.rs  swapchain.rs  sync.rs  util.rs
crates/marpii/src/allocator/: gpu_allocator.rs  unallocated.rs
crates/marpii/src/context/: debugger.rs  device.rs  instance.rs  physical_device.rs  queue.rs
crates/marpii/src/resources/: buffer.rs  command_buffer.rs  descriptor.rs  image.rs  pipeline.rs  push_constant.rs  shader_module.rs
crates/marpii/src/util/: query_pool.rs  timestamp.rs
examples/custom-rmg-widget/: Cargo.toml
examples/custom-rmg-widget/src/: custom_shader.comp  custom_shader.spirv  main.rs  mypass.rs
examples/custom_context/: Cargo.toml
examples/custom_context/src/: main.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
examples/gltf_loading/: Cargo.toml
examples/gltf_loading/src/: forward_pass.rs  main.rs
examples/hello_triangle/: Cargo.toml  build.rs  triangle_shader.comp
examples/hello_triangle/src/: main.rs
examples/marpii-iced/: Cargo.toml
examples/marpii-iced/src/: ctrl.rs  main.rs
examples/render_graph/: Cargo.toml
examples/render_graph/src/: compute_pass.rs  main.rs
examples/rmg-macros/: Cargo.toml
examples/rmg-macros/src/: forward_pass.rs  main.rs  simulation.rs
examples/rmg_rendering/: Cargo.toml  build.rs
examples/rmg_rendering/glsl/: forward.frag  forward.vert  shared.glsl  simulation.comp
examples/rmg_rendering/src/: camera_controller.rs  copy_buffer.rs  forward_pass.rs  main.rs  model_loading.rs  simulation.rs
examples/rmg_shader/: Cargo.toml
examples/rmg_shader/glsl/: forward.frag  forward.vert  forward_test.comp  shared.glsl  simulation.comp
examples/rmg_shader/src/: lib.rs
examples/rust_shader/: Cargo.toml
examples/rust_shader/src/: lib.rs
examples/scheduler_dryrun/: Cargo.toml
examples/scheduler_dryrun/src/: main.rs
examples/shader_builder/: Cargo.toml
examples/shader_builder/src/: main.rs
examples/shared/: Cargo.toml
examples/shared/src/: lib.rs
examples/vertex_graphics_shader/: Cargo.toml
examples/vertex_graphics_shader/src/: lib.rs
(+23 files in other folders)
