[workspace]
members = [
    "crates/marpii",
    "crates/marpii-commands",
    "crates/marpii-descriptor",
    "crates/marpii-wgpu",
    "crates/marpii-rmg",
    "crates/marpii-rmg-shared",
    "crates/marpii-rmg-tasks/marpii-rmg-tasks",
    "crates/marpii-rmg-tasks/marpii-rmg-task-shader",
    "crates/marpii-rmg-tasks/marpii-rmg-task-shared",

    "examples/hello_triangle",
    "examples/custom_context",
    "examples/rmg_rendering",
    "examples/shared",
    "examples/egui",
    "examples/marpii-iced",
    #"examples/scheduler_dryrun"
]

resolver = "2"

[workspace.dependencies]
marpii = { path = "crates/marpii" }
marpii-commands = { path = "crates/marpii-commands" }
marpii-descriptor = { path = "crates/marpii-descriptor" }
marpii-rmg = { path = "crates/marpii-rmg" }
marpii-rmg-shared = { path = "crates/marpii-rmg-shared" }
marpii-rmg-tasks = { path = "crates/marpii-rmg-tasks/marpii-rmg-tasks" }
marpii-rmg-task-shared = { path = "crates/marpii-rmg-task-shared" }
marpii-wgpu = { path = "crates/marpii-wgpu" }

ash = "0.38.0"
ash-window = "0.13"
raw-window-handle = "0.6.2"
#spirv-std = { git = "https://github.com/LykenSol/rust-gpu", rev = "d78df7e40f860efe85ef369fed10da2f2940bb70" }
#spirv-builder = { git = "https://github.com/LykenSol/rust-gpu", rev = "d78df7e40f860efe85ef369fed10da2f2940bb70" }
bytemuck = "1.21"
log = "0.4"
ahash = "0.8"
anyhow = "1"
thiserror = "2"
tinyvec = { version = "1.8.0", features = ["alloc"] }
simple_logger = "5"
oos = { git = "https://gitlab.com/tendsinmende/oos.git" }
winit = "0.30"
puffin = "0.19"
rspirv-reflect = "0.9.0"
graphviz-rust = "0.9.3"
slotmap = "1.0"
