[workspace]
members = [
    "crates/marpii",
    "crates/marpii-commands",
    "crates/marpii-descriptor",
    "crates/marpii-rmg",
    "crates/marpii-rmg-shared",
    "crates/marpii-rmg-tasks/marpii-rmg-tasks",
    "crates/marpii-rmg-tasks/marpii-rmg-task-shader",
    "crates/marpii-rmg-tasks/marpii-rmg-task-shared",

    "examples/hello_triangle",
    "examples/custom_context",
    "examples/rmg_rendering",
    "examples/shared",
    "examples/egui",
    "examples/custom-rmg-widget",
    "crates/iced-marpii",
    "crates/iced-marpii/shaders/iced-marpii-shared",
    "crates/iced-marpii/examples/canvas",
]
exclude = [
    "crates/iced-marpii/shaders/shader-quad",
    "crates/iced-marpii/shaders/shader-quad-gradient",
    "crates/iced-marpii/shaders/shader-mesh",
    "crates/iced-marpii/shaders/shader-shape",
    "crates/iced-marpii/shaders/shader-text",
    "crates/iced-marpii/shaders/shader-builder",
]

resolver = "2"

[workspace.dependencies]
marpii = { path = "crates/marpii" }
marpii-commands = { path = "crates/marpii-commands" }
marpii-descriptor = { path = "crates/marpii-descriptor" }
marpii-rmg = { path = "crates/marpii-rmg" }
marpii-rmg-shared = { path = "crates/marpii-rmg-shared" }
marpii-rmg-tasks = { path = "crates/marpii-rmg-tasks/marpii-rmg-tasks" }
marpii-rmg-task-shader = { path = "crates/marpii-rmg-tasks/marpii-rmg-shader" }
marpii-rmg-task-shared = { path = "crates/marpii-rmg-tasks/marpii-rmg-task-shared" }
marpii-wgpu = { path = "crates/marpii-wgpu" }
iced-marpii = { path = "crates/iced-marpii" }

#iced = { version = "0.14", default-features = false }
#iced_core = { version = "0.14", default-features = false }
#iced_graphics = { version = "0.14", default-features = false }
iced = {git = "https://github.com/SiebenCorgie/iced.git", branch = "re-add-iter_mut-stack", default-features = false}
iced_core = {git = "https://github.com/SiebenCorgie/iced.git", branch = "re-add-iter_mut-stack"}
iced_graphics = {git = "https://github.com/SiebenCorgie/iced.git", branch = "re-add-iter_mut-stack"}



ash = "0.38.0"
ash-window = "0.13"
raw-window-handle = "0.6.2"
bytemuck = "1.21"
log = "0.4"
ahash = "0.8"
anyhow = "1"
thiserror = "2"
smallvec = "1.15.1"
simple_logger = "5"
oos = { git = "https://gitlab.com/tendsinmende/oos.git" }
winit = "0.30"
puffin = "0.19"
rspirv-reflect = "0.9.0"
graphviz-rust = "0.9.3"
slotmap = "1"
image = "0.25.9"
lyon = "1.0"
lyon_path = "1.0"
