[package]
name = "iced-marpii"
version = "0.1.0"
edition = "2021"

[features]
validation = []

[dev-dependencies]
simple_logger.workspace = true

[dependencies]
iced = "0.13"
iced_core = "0.13"
iced_graphics = "0.13"

marpii.workspace = true
marpii-rmg.workspace = true
marpii-rmg-tasks.workspace = true
log.workspace = true
iced-marpii-shared = { path = "shaders/iced-marpii-shared" }
ahash.workspace = true
cosmic-text = "0.12.1"
etagere = "0.2.15"
lru = "0.13.0"
