[package]
name = "iced-marpii"
version = "0.1.0"
edition = "2024"
authors = ["Tendsin Mende"]
description = "Iced renderer based on marpii-rmg, Ash, and Vulkan. Provides helpers to embed a custom Vulkan renderer into an Iced GUI."
license = "MPL-2.0"
keywords = ["gamedev", "graphics", "vulkan", "gui"]
categories = ["game-development", "gui"]

[features]
default = ["default-executor", "goodies", "iced/x11", "iced/wayland"]
#activates the smol-executor by default on iced.
default-executor = ["iced/smol"]
goodies = ["iced/sysinfo"]
#enables the canvas rendering implementation
geometry = ["iced_graphics/geometry", "lyon"]

[dev-dependencies]
simple_logger.workspace = true
chrono = "0.4"


[dependencies]
iced.workspace = true
iced_core.workspace = true
iced_graphics.workspace = true
lyon = { workspace = true, optional = true }

marpii.workspace = true
marpii-rmg.workspace = true
marpii-rmg-tasks.workspace = true
log.workspace = true
iced-marpii-shared = { path = "shaders/iced-marpii-shared" }
ahash.workspace = true
cosmic-text = "0.15"
etagere = "0.2.15"
lru = "0.16.2"
