[package]
name = "marpii-command-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging"]
# if enabled, uses the log crate for messages.
logging = ["log"]

#if enabled the reasoning for pipeline barriers and queue syncs is printed into the TRACING
# level of log
log_reasoning = ["log"]

[dependencies]
marpii = {path = "../marpii"}
marpii-commands = {path = "../marpii-commands"}
anyhow = "1.0.56"
fxhash = "0.2.1"
slotmap = "1.0"

log = {version = "0.4.15", optional = true}

[dev-dependencies]
simple_logger = "2.1.0"

[[example]]
name = "test_graph"
path = "examples/test_graph.rs"

[[example]]
name = "headless_graph"
path = "examples/headless_graph.rs"