[package]
name = "marpii-commands"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging", "image_loading"]
# if enabled, uses the log crate for messages.
logging = ["log"]
# if enabled, allows creating images directly from a path.
image_loading = ["image"]

[dependencies]
marpii = { path = "../marpii" }
log = { workspace = true, optional = true }
image = { workspace = true, optional = true }
tinyvec.workspace = true
