[package]
name = "marpii-commands"
version = "1.0.0"
edition = "2024"
authors = ["Tendsin Mende"]
description = "Helpers related to data initialization in buffers and images as well as memory barrier creation."
license = "MPL-2.0"
keywords = ["gamedev", "graphics", "vulkan", "api"]
categories = ["game-development", "graphics", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging"]
# if enabled, uses the log crate for messages.
logging = ["log"]
# if enabled, allows creating images directly from a path.
image_loading = ["image"]

[dependencies]
marpii.workspace = true
log = { workspace = true, optional = true }
image = { workspace = true, optional = true }
smallvec.workspace = true
