[package]
name = "marpii-descriptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging"]
# if enabled, uses the log crate for messages.
logging = ["log"]

[dependencies]
marpii = {path = "../marpii"}
fxhash = "0.2.1"
anyhow = "1.0.56"
log = {version = "0.4.15", optional = true}