[package]
name = "marpii-descriptor"
version = "1.0.0"
edition = "2024"
authors = ["Tendsin Mende"]
description = "Helper for descriptor-pools-based bindless setups."
license = "MPL-2.0"
keywords = ["gamedev", "graphics", "vulkan", "api"]
categories = ["game-development", "graphics", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging"]
# if enabled, uses the log crate for messages.
logging = ["log"]

# If enabled the crate only compiles the "bindless wrapper" portion of the crate. This allows the crate
# to be used within a shader. It will expose a simple wrapper around the standard bindless layout that allows loading resources from resource handles without having to deal with the
# correct access etc.
bindless-wrapper = []

[dependencies]
marpii.workspace = true
ahash.workspace = true
log = { workspace = true, optional = true }
