[package]
name = "marpii-rmg-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
#If enabled, adds marpii based constructors
std = ["marpii"]
logging = ["log"]

[dependencies]
marpii = {path = "../marpii", optional = true}
log = {workspace = true, optional=true}
bytemuck.workspace = true
