[package]
name = "marpii-rmg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging", "debug_marker"]
# if enabled, uses the log crate for messages. Note that the graph prints reasoning of decissions into the tracing level
logging = ["log"]

# if enabled, adds Vulkan's debug marker to images, buffers and samplers (all objects managed by RMG).
# Also markes command buffer regions by the Task's name.
debug_marker = []

# if enabled, enables rmg to bind and build acceleration structures.
ray-tracing = []


[dependencies]
thiserror.workspace = true
slotmap = "1.0"
ahash.workspace = true
tinyvec.workspace = true
marpii = {path = "../../crates/marpii"}
marpii-commands = {path = "../../crates/marpii-commands"}
marpii-descriptor = {path = "../../crates/marpii-descriptor"}
marpii-rmg-shared = {path = "../../crates/marpii-rmg-shared", features = ["std"]}
winit.workspace = true

log = {workspace = true, optional = true}

#for the garbage collector
crossbeam-channel = "0.5.6"
#to spawn garbage collection
poll-promise = "0.2"

[dev-dependencies]
static_assertions = {version = "1.1.0"}
