[package]
name = "marpii-rmg"
version = "1.0.0"
edition = "2024"
authors = ["Tendsin Mende"]
description = "MarpII's ResourceManagingGraph: Provides resource management, graph-based scheduling, and helpers for everyday graphics-programming tasks."
license = "MPL-2.0"
keywords = ["gamedev", "graphics", "vulkan", "api"]
categories = ["game-development", "graphics", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging", "debug_marker"]
# if enabled, uses the log crate for messages. Note that the graph prints reasoning of decissions into the tracing level
logging = ["log"]

# if enabled, adds Vulkan's debug marker to images, buffers and samplers (all objects managed by RMG).
# Also markes command buffer regions by the Task's name.
debug_marker = []

#if enabled, adds time stamps to all tasks and a query operation
#that returns 64bit nano-second durations for each task.
timestamps = []

#If enabled, allow you to render dot/svg graphs for a schedule, which makes debugging easier
dot = ["graphviz-rust"]

[dependencies]
thiserror.workspace = true
slotmap.workspace = true
ahash.workspace = true
smallvec.workspace = true
marpii = {workspace = true, features = ["buffer_device_address"]}
marpii-commands.workspace = true
marpii-descriptor.workspace = true
marpii-rmg-shared = { workspace = true, features = ["std"] }
winit.workspace = true
log = { workspace = true, optional = true }
graphviz-rust = { workspace = true, optional = true }

[dev-dependencies]
static_assertions = { version = "1.1.0" }
