[package]
name = "custom-rmg-widget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-marpii.workspace = true
iced = { version = "0.13", features = ["smol"] }
simple_logger.workspace = true
log = "*"
