[package]
name = "custom-rmg-widget"
version = "1.0.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-marpii.workspace = true
iced = { workspace = true, features = ["smol", "x11", "wayland"] }
simple_logger.workspace = true
log = "*"
