[package]
name = "custom_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marpii = {path = "../../crates/marpii", features=["logging"]}
marpii-rmg = {path = "../../crates/marpii-rmg"}
marpii-rmg-tasks = {path = "../../crates/marpii-rmg-tasks/marpii-rmg-tasks"}
marpii-descriptor = {path = "../../crates/marpii-descriptor"}
winit.workspace = true
simple_logger.workspace = true
