[package]
name = "custom_context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marpii = { workspace = true, features = ["logging"] }
marpii-rmg.workspace = true
marpii-rmg-tasks.workspace = true
marpii-descriptor.workspace = true
winit.workspace = true
simple_logger.workspace = true
