[package]
name = "egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
simple_logger.workspace = true
winit = "0.27"
anyhow.workspace = true

marpii = {path = "../../crates/marpii", features=["logging"]}
marpii-rmg = {path = "../../crates/marpii-rmg"}
marpii-rmg-tasks = {path = "../../crates/marpii-rmg-tasks/marpii-rmg-tasks"}
