[package]
name = "egui"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
simple_logger.workspace = true
anyhow.workspace = true

marpii = { workspace = true, features = ["logging"] }
marpii-rmg.workspace = true
marpii-rmg-tasks = { workspace = true, features = ["egui-task", "logging"] }
