[package]
name = "hello_triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger.workspace = true
anyhow.workspace = true

marpii = {path = "../../crates/marpii"}
marpii-commands = {path = "../../crates/marpii-commands"}
marpii-descriptor = {path = "../../crates/marpii-descriptor"}
winit = "0.27"

[build-dependencies]
spirv-builder.workspace = true
