[package]
name = "hello_triangle"
version = "1.0.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger.workspace = true
anyhow.workspace = true

marpii = { workspace = true, features = ["shader_reflection"] }
marpii-commands.workspace = true
marpii-descriptor.workspace = true
winit.workspace = true

[build-dependencies]
#spirv-builder.workspace = true
