[package]
name = "marpii-iced"
version = "0.1.0"
edition = "2021"

[dependencies]

#iced = { version = "0.12", features = ["canvas", "tokio", "debug"] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "wgpu-22.0", features = [
    "canvas",
    "tokio",
    "debug",
] }
#iced_wgpu = "0.12"
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", branch = "wgpu-22.0" }
#iced_winit = "0.12"
iced_winit = { git = "https://github.com/iced-rs/iced.git", branch = "wgpu-22.0" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", branch = "wgpu-22.0" }
marpii = { path = "../../crates/marpii", features = ["logging"] }
marpii-wgpu = { path = "../../crates/marpii-wgpu" }
winit.workspace = true
simple_logger.workspace = true
chrono = "0.4"
tracing-subscriber = "0.3"
