[package]
name = "rmg_rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger.workspace = true
anyhow.workspace = true

marpii = {path = "../../crates/marpii", features=["logging"]}
marpii-rmg = {path = "../../crates/marpii-rmg"}
marpii-rmg-tasks = {path = "../../crates/marpii-rmg-tasks/marpii-rmg-tasks"}
marpii-descriptor = {path = "../../crates/marpii-descriptor"}
winit.workspace = true
log = "*"
image = "0.24.3"
glam = "0.23"
easy-gltf = "1.0.0"
shared = {path = "../shared"}
