[package]
name = "rmg_rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger.workspace = true
anyhow.workspace = true

marpii = { workspace = true, features = ["logging"] }
marpii-rmg = { workspace = true, features = ["timestamps"] }
marpii-rmg-tasks.workspace = true
marpii-descriptor.workspace = true
winit.workspace = true
log = "*"
image.workspace = true
glam = "0.24"
easy-gltf = "1.0.0"
shared = { path = "../shared" }
