[package]
name = "scheduler_dryrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
simple_logger = "2.1.0"
marpii = {path = "../../crates/marpii", features=["logging"]}
marpii-rmg = {path = "../../crates/marpii-rmg"}
winit = "0.27"
log.workspace = true
