[package]
name = "shader_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev="0866cf591a7fdbbd15bdb3468e192bb9b6189fd0"}
