[package]
name = "shader_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev="14bbae1e4bbc5b49af25f3d272406b49c7144c4e"}
