[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marpii-rmg-shared = {path = "../../crates/marpii-rmg-shared"}
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"], rev="a9a233eb80f6d5d512130f8c12469a1a74f58c65"}
bytemuck = "1"
