[package]
name = "marpii-rmg-task-shader"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
crate-type = ["lib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marpii-rmg-task-shared.workspace = true
#spirv-std = { workspace=true}
