[package]
name = "marpii-rmg-task-shared"
version = "0.2.0"
edition = "2024"
authors = ["Tendsin Mende"]
description = "No-Std, shader ready shared structures used by marpii-rmg-tasks."
license = "MPL-2.0"
keywords = ["gamedev", "graphics", "vulkan", "api"]
categories = ["game-development", "graphics", "rendering::graphics-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#spirv-std = { workspace=true}
marpii-rmg-shared.workspace = true
bytemuck.workspace = true
