[package]
name = "marpii-rmg-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging", "egui-task"]
# if enabled, uses the log crate for messages. Note that the graph prints reasoning of decissions into the tracing level
logging = ["log"]

#If enabled, compiles the egui shader and integration tasks.
egui-task = ["egui-winit", "fxhash"]

[dependencies]
marpii = {path = "../../marpii"}
marpii-rmg = {path = "../../marpii-rmg"}
marpii-rmg-task-shared = {path = "../marpii-rmg-task-shared"}
log = {version = "0.4.15", optional = true}
anyhow = "1.0.56"

egui-winit  = {version = "0.19", optional = true}
fxhash = {version = "0.2.1", optional = true}


[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev="a9a233eb80f6d5d512130f8c12469a1a74f58c65"}
