[package]
name = "marpii-rmg-tasks"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["logging", "egui-task"]
# if enabled, uses the log crate for messages. Note that the graph prints reasoning of decissions into the tracing level
logging = ["log"]

#If enabled, compiles the egui shader and integration tasks.
egui-task = ["egui-winit", "ahash", "egui"]

[dependencies]
marpii.workspace = true
marpii-rmg.workspace = true
marpii-rmg-task-shared.workspace = true
log = { workspace = true, optional = true }
thiserror.workspace = true
#egui-winit = { version = "0.28", optional = true, features = ["bytemuck"] }
#egui = { version = "0.28", optional = true }
egui-winit = { version = "0.31", optional = true, features = ["bytemuck"] }
egui = { version = "0.31", optional = true }
ahash = { workspace = true, optional = true }
bytemuck.workspace = true

#[build-dependencies]
#spirv-builder.workspace = true
